--- a/web/components/StatsPage/MobileTeamList.module.scss
+++ b/web/components/StatsPage/MobileTeamList.module.scss
@@ -233,7 +233,7 @@
         height v.$mobile-animation-normal v.$mobile-easing-smooth;
     }
 
-  .teamList {
+    .teamList {
       display: flex;
       flex-direction: row;
       gap: v.$mobile-space-xs;
@@ -259,7 +259,7 @@
       }
 
       // Grid to flex transition
-  transition: none;
+      transition: none;
     }
 
     .teamListItem {
@@ -287,7 +287,10 @@
       object-fit: contain;
       filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.4));
       opacity: 0.9;
-      transition: opacity 0.2s ease, filter 0.2s ease, transform 0.25s ease;
+      transition:
+        opacity 0.2s ease,
+        filter 0.2s ease,
+        transform 0.25s ease;
 
       // Hover effect in collapsed state
       &:hover {
